fix AI usage